--- a/src/dev.yaml
+++ b/src/dev.yaml
@@ -1,28 +1,23 @@
-name: Auto Deploy to Netlify
+name: CI
+
 on:
-push:
-branches: ["main"]
-workflow_dispatch:
+  push:
+    branches:
+      - main
+
 jobs:
-auto-deploy:
-runs-on: ubuntu-latest
-steps:
-- name: Checkout the repository
-uses: actions/checkout@v3
-- name: Install Node and NPM
-uses: actions/setup-node@v3
-with:
-node-version: '16'
-- name: Install necessary packages
-run: npm install
-- name: Testing the project
-run: npm run test
-- name: Build the project
-run: npm run build
-- name: Publish
-uses: netlify/actions/cli@master
-with:
-args: deploy --build --prod
-env:
-NETLIFY_SITE_ID: ${{ c805b0c2-ea67-47af-afc7-17a25d4f7526}}
-NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run dev
+
+      - name: Test
+        run: npm run test
