--- a/src/main.yaml
+++ b/src/main.yaml
@@ -21,3 +21,10 @@ jobs:
 
       - name: Test
         run: npm run test
+
+    - name: Deploy to Vercel
+      uses: vercel/actions@v21
+      with:
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
