--- a/src/main.yaml
+++ b/src/main.yaml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run dev
+        run: npm run build
 
       - name: Test
         run: npm run test
